# adsb

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yaml
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
producer/: Cargo.toml  Dockerfile
producer/src/: adsb_handler.rs  main.rs  queue.rs
