[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.0"
redis = { version = "0.23.3", features = ["tokio-comp", "aio"] }
lapin = "1.6.10"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
warp = "0.3"
log = "0.4.22"
serde_json = "1.0.133"
simplelog = "0.12.2"
futures-util = "0.3.31"
dotenvy = "0.15.7"
